App13: moved media files into separate folder and added note on --enable-native-access=javafx.media